# slos-m

./: Cargo.toml  LICENSE  README.md  memory.x
.cargo/: config.toml
boards/lpc55s69/: Cargo.toml  build.rs  memory.x
boards/lpc55s69/src/: main.rs
kernel/: Cargo.toml
kernel/src/: lib.rs
