[package]
name = "lpc55s69"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
panic-halt.workspace = true
kernel = { path = "../../kernel" }
lpc55-hal.workspace = true

[[bin]]
name = "lpc55s69"
path = "src/main.rs"
test = false
bench = false
